update test cases

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "deploy:ethereumHolesky": "hardhat run migrations/1_deploy.js --network ethereumHolesky",
     "test:ethereumHolesky:DmtpTech": "hardhat test ./test/DmtpTech.js --network ethereumHolesky",
+    "export:abi": "node scripts/export-abi.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
