--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@evmchain/contract-deployer": "git+ssh://git@github.com:ngocht-dev/contract-deployer.git#v1.0",
+    "@evmchain/contract-deployer": "git+ssh://git@github.com:ngocht-dev/contract-deployer.git#ngocht-dev",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-ignition": "^0.15.9",
